--- a/public/views/comments.view.client.html
+++ b/public/views/comments.view.client.html
@@ -15,9 +15,9 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="#/profile">Profile</a></li>
                     <li><a href="#">Friends</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="#/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -35,7 +35,7 @@
                     </div>
                     <div class="panel-body">
                         <div ng-repeat="comment in model.comments">
-                            <div ng-include="'views/include/comment.view.client.html'"></div>
+                            <div ng-include="'views/include/comments/comment.view.client.html'"></div>
                         </div>
                     </div>
                 </div>
