--- a/public/views/friends.view.client.html
+++ b/public/views/friends.view.client.html
@@ -16,7 +16,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#/profile">Profile</a></li>
-                    <li><a href="#/friends">Friends</a></li>
                     <li><a href="#/logout" ng-click="model.logout()">Logout</a></li>
                 </ul>
             </div>
@@ -29,32 +28,32 @@
 
                 <ul class="nav nav-tabs">
                     <li class="active">
-                        <a data-toggle="tab" href data-target="#board">Board</a>
+                        <a data-toggle="tab" href data-target="#friends">Friends</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href data-target="#hn-top">HN Top</a>
+                        <a data-toggle="tab" href data-target="#requests">New Requests</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href data-target="#hn-best">HN Best</a>
+                        <a data-toggle="tab" href data-target="#pending">Requests Sent</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href data-target="#hn-new">HN New</a>
+                        <a data-toggle="tab" href data-target="#search">Search</a>
                     </li>
                 </ul>
 
                 <!-- Tab Panes -->
                 <div class="tab-content">
-                    <div class="tab-pane fade in active" id="board">
+                    <div class="tab-pane fade in active" id="friends">
                         <h1> HEY HEY </h1>
                     </div>
-                    <div class="tab-pane fade" id="hn-top">
-                        <div ng-include src="'views/include/home/hn-top.view.client.html'"></div>
+                    <div class="tab-pane fade" id="requests">
+                        <h1> HEY HEY </h1>
                     </div>
-                    <div class="tab-pane fade" id="hn-best">
-                        <div ng-include src="'views/include/home/hn-best.view.client.html'"></div>
+                    <div class="tab-pane fade" id="pending">
+                        <h1> HEY HEY </h1>
                     </div>
-                    <div class="tab-pane fade" id="hn-new">
-                        <div ng-include src="'views/include/home/hn-new.view.client.html'"></div>
+                    <div class="tab-pane fade" id="search">
+                        <h1> HEY HEY </h1>
                     </div>
                 </div>
             </div>
