--- a/public/views/friends.view.client.html
+++ b/public/views/friends.view.client.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href>
+                <a class="navbar-brand" href="#/home">
                     <i class="fa fa-hacker-news fa-lg"></i>HackerFeed
                 </a>
             </div>
@@ -44,16 +44,16 @@
                 <!-- Tab Panes -->
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="friends">
-                        <h1> HEY HEY </h1>
+                        <div ng-include src="'views/include/friends/friends.view.client.html'"></div>
                     </div>
                     <div class="tab-pane fade" id="requests">
-                        <h1> HEY HEY </h1>
+                        <div ng-include src="'views/include/friends/requests.view.client.html'"></div>
                     </div>
                     <div class="tab-pane fade" id="pending">
-                        <h1> HEY HEY </h1>
+                        <div ng-include src="'views/include/friends/approvals.view.client.html'"></div>
                     </div>
                     <div class="tab-pane fade" id="search">
-                        <h1> HEY HEY </h1>
+                        <div ng-include src="'views/include/friends/search.view.client.html'"></div>
                     </div>
                 </div>
             </div>
