Item client service

--- a/public/views/friends.view.client.html
+++ b/public/views/friends.view.client.html
@@ -31,7 +31,7 @@
                         <a data-toggle="tab" href data-target="#friends">Friends</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href data-target="#requests">New Requests</a>
+                        <a data-toggle="tab" href data-target="#requests">Requests Received</a>
                     </li>
                     <li>
                         <a data-toggle="tab" href data-target="#pending">Requests Sent</a>
