--- a/public/views/include/friends/friends.view.client.html
+++ b/public/views/include/friends/friends.view.client.html
@@ -1,24 +1,28 @@
 <div ng-controller="FriendsController as child1">
+
     <p ng-if="child1.friends.length === 0" class="bg-success message">Start making friends by clicking on the search tab!</p>
 
-    <table class="table table-hover table-friends">
-        <thead>
-        <tr>
-            <th>#</th>
-            <th>Username</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="friend in child1.friends">
-            <th scope="row">{{$index + 1}}</th>
-            <td>{{friend.username}}</td>
-            <td>{{friend.firstName}}</td>
-            <td>{{friend.lastName}}</td>
-            <td>{{friend.email}}</td>
-        </tr>
-        </tbody>
-    </table>
+    <div ng-if="child1.friends.length > 0">
+        <table class="table table-hover table-friends">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>Username</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="friend in child1.friends">
+                <th scope="row">{{$index + 1}}</th>
+                <td>{{friend.username}}</td>
+                <td>{{friend.firstName}}</td>
+                <td>{{friend.lastName}}</td>
+                <td>{{friend.email}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <a href class="btn btn-primary" ng-click="child1.init()"><i class="fa fa-refresh"></i> Refresh</a>
 </div>
