--- a/public/views/include/friends/search.view.client.html
+++ b/public/views/include/friends/search.view.client.html
@@ -1,3 +1,51 @@
 <div ng-controller="SearchController as child4">
+    <div id="search-panel">
+        <p>Search results will include all users whose username, first name, or last name contain your query string.</p>
 
+        <div ng-show="child4.error" class="alert alert-danger">
+            {{child4.error}}
+        </div>
+
+        <form class="form-inline">
+            <div class="form-group">
+                <label class="sr-only" for="query">Search</label>
+                <input type="text" class="form-control" id="query" ng-model="child4.query">
+            </div>
+            <div class="form-group">
+                <a class="btn btn-primary" ng-click="child4.search()">Search</a>
+            </div>
+        </form>
+    </div>
+
+    <p ng-show="child4.message" class="bg-success message">{{child4.message}}</p>
+
+    <div ng-if="child4.results.length > 0">
+        <table class="table table-hover table-friends">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>Username</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="result in child4.results">
+                <th scope="row">{{$index + 1}}</th>
+                <td>{{result.username}}</td>
+                <td>{{result.firstName}}</td>
+                <td>{{result.lastName}}</td>
+                <td>{{result.email}}</td>
+                <td>
+                    <a ng-if="child4.user.friends.indexOf(result._id) === -1 && child4.user.approvals.indexOf(result._id) === -1 && child4.user.requests.indexOf(result._id) === -1  && result._id !== child4.user._id"
+                       title="Add Friend" ng-click="child4.friendRequest(result._id)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
