--- a/public/views/home.view.client.html
+++ b/public/views/home.view.client.html
@@ -17,7 +17,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#/profile">Profile</a></li>
                     <li><a href="#/friends">Friends</a></li>
-                    <li><a href="#/logout" ng-click="model.logout()">Logout</a></li>
+                    <li><a href="#/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
