--- a/public/views/include/friends/requests.view.client.html
+++ b/public/views/include/friends/requests.view.client.html
@@ -17,7 +17,7 @@
             <tbody>
             <tr ng-repeat="request in child2.requests">
                 <th scope="row">{{$index + 1}}</th>
-                <td>{{request.username}}</td>
+                <td><a href="#/user/{{request._id}}">{{request.username}}</a></td>
                 <td>{{request.firstName}}</td>
                 <td>{{request.lastName}}</td>
                 <td>{{request.email}}</td>
