--- a/public/views/login.view.client.html
+++ b/public/views/login.view.client.html
@@ -41,6 +41,9 @@
                     </div>
                     <div class="form-group">
                         <a class="btn btn-primary btn-block" ng-click="model.login()">Login</a>
+                        <a class="btn  btn-info btn-block" href="/api/auth/facebook">
+                            <span class="fa fa-facebook"></span> Login via Facebook
+                        </a>
                     </div>
                 </form>
             </div>
