--- a/public/views/comments.view.client.html
+++ b/public/views/comments.view.client.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#/profile">Profile</a></li>
-                    <li><a href="#">Friends</a></li>
+                    <li><a href="#/friends">Friends</a></li>
                     <li><a href="#/logout">Logout</a></li>
                 </ul>
             </div>
@@ -28,14 +28,41 @@
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div id="comments-panel" class="panel panel-default">
                     <div id="comments-panel-heading" class="panel-heading">
-                        <a class="action-link" href="#/home"><i class="fa fa-chevron-left fa-pull-left action action-comments"></i></a>
-                        <a class="action-link" href="#"><i class="fa fa-share-alt fa-lg fa-pull-right action action-comments"></i></a>
-                        <a class="action-link" href="#"><i class="fa fa-floppy-o fa-lg fa-pull-right action action-comments"></i></a>
+                        <a class="action-link" href ng-click="model.openModal(mode.item.id)"><i class="fa fa-share-alt fa-lg fa-pull-right action action-comments"></i></a>
+                        <a class="action-link" href ng-click="model.saveItem(model.item.id)"><i class="fa fa-floppy-o fa-lg fa-pull-right action action-comments"></i></a>
                         <a class="action-link" target="_blank" href="{{model.item.url}}"><h3 class="panel-title">{{model.item.title}}</h3></a>
                     </div>
                     <div class="panel-body">
+                        <p ng-show="model.error" class="bg-success message">{{model.error}}</p>
+                        <p ng-show="model.message" class="bg-success message-home">{{model.message}}</p>
+
                         <div ng-repeat="comment in model.comments">
                             <div ng-include="'views/include/comments/comment.view.client.html'"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal -->
+                <div share-modal="{{model.showModal}}" class="modal fade" tabindex="-1" data-backdrop="static" data-keyboard="false">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" ng-click="model.closeModal()"><span>&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel">Share With</h4>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="checkbox" ng-repeat="friend in model.friends">
+                                        <label>
+                                            <input type="checkbox" ng-model="model.friendIds[$index].selected">{{friend.username}}
+                                        </label>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" ng-click="model.closeModal()">Cancel</button>
+                                <button type="button" class="btn btn-primary" ng-click="model.shareItem()">Share</button>
+                            </div>
                         </div>
                     </div>
                 </div>
