--- a/public/views/profile.view.client.html
+++ b/public/views/profile.view.client.html
@@ -31,10 +31,16 @@
                     {{model.error}}
                 </div>
 
+                <p class="bg-success message" ng-show="model.message">{{model.message}}</p>
+
                 <form>
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input id="username" type="text" class="form-control" ng-model="model.user.username" disabled>
+                        <input id="username" type="text" class="form-control" ng-model="model.user.username" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label> (Leave blank to not update)
+                        <input id="password" type="password" class="form-control" ng-model="model.user.password">
                     </div>
                     <div class="form-group">
                         <label for="firstName">First Name</label>
