--- a/public/views/user.view.client.html
+++ b/public/views/user.view.client.html
@@ -16,6 +16,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#/profile">Profile</a></li>
+                    <li><a href="#/friends">Friends</a></li>
                     <li><a href="#/logout">Logout</a></li>
                 </ul>
             </div>
@@ -25,35 +26,22 @@
     <div class="container">
         <div class="row">
             <div id="main-panel" class="col-xs-12 col-sm-8 col-sm-offset-2">
-
                 <ul class="nav nav-tabs">
                     <li class="active">
-                        <a data-toggle="tab" href data-target="#friends">Friends</a>
+                        <a data-toggle="tab" href data-target="#board">Board</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href data-target="#requests">Requests Received</a>
-                    </li>
-                    <li>
-                        <a data-toggle="tab" href data-target="#pending">Requests Sent</a>
-                    </li>
-                    <li>
-                        <a data-toggle="tab" href data-target="#search">Search</a>
+                        <a data-toggle="tab" href data-target="#profile">Profile</a>
                     </li>
                 </ul>
 
                 <!-- Tab Panes -->
                 <div class="tab-content">
-                    <div class="tab-pane fade in active" id="friends">
-                        <div ng-include src="'views/include/friends/friends.view.client.html'"></div>
+                    <div class="tab-pane fade in active" id="board">
+                        <div ng-include src="'/views/include/user/board.view.client.html'"></div>
                     </div>
-                    <div class="tab-pane fade" id="requests">
-                        <div ng-include src="'views/include/friends/requests.view.client.html'"></div>
-                    </div>
-                    <div class="tab-pane fade" id="pending">
-                        <div ng-include src="'views/include/friends/approvals.view.client.html'"></div>
-                    </div>
-                    <div class="tab-pane fade" id="search">
-                        <div ng-include src="'views/include/friends/search.view.client.html'"></div>
+                    <div class="tab-pane fade" id="profile">
+                        <div ng-include src="'views/include/user/profile.view.client.html'"></div>
                     </div>
                 </div>
             </div>
