--- a/public/views/friends.view.client.html
+++ b/public/views/friends.view.client.html
@@ -15,6 +15,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    <li ng-if="model.user.type === 'STANDARD'"><a href="#/admin">Admin Panel</a></li>
                     <li><a href="#/profile">Profile</a></li>
                     <li><a href="#/logout">Logout</a></li>
                 </ul>
