--- a/public/views/profile.view.client.html
+++ b/public/views/profile.view.client.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input id="email" type="text" class="form-control" ng-model="model.user.email"
+                        <input id="email" type="text" class="form-control" ng-model="model.user.email">
                     </div>
                     <div class="form-group last-group">
                         <a class="btn btn-primary btn-block" ng-click="model.updateUser()">Update</a>
