--- a/public/views/admin.view.client.html
+++ b/public/views/admin.view.client.html
@@ -33,7 +33,7 @@
                         <a data-toggle="tab" href data-target="#search">Search</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href data-target="#create">New Admin</a>
+                        <a data-toggle="tab" href data-target="#create">Admins</a>
                     </li>
                 </ul>
 
